<resources>
    <string name="app_name">PersonalDiary</string>
    <string name="texto_lista_tarefas">Bem vindo a sua lista de eventos.</string>
    <string name="selecione_opcao">Selecione uma opção:</string>
    <string name="adicionar_uma_nova_tarefa">Adicionar um novo eventos</string>
    <string name="listar_tarefas">Listar eventos</string>
    <string name="por_favor_digite_os_dados_solicitados_abaixo">Por favor, digite os dados solicitados abaixo:</string>
    <string name="data_do_evento">Título do evento</string>
    <string name="descricao_do_evento">Descrição do evento</string>
    <string name="salvar">Salvar</string>
    <string name="atualizar_dados">Atualizar dados</string>
</resources>
