<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_apresentacao"
        style="@style/genericTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="49dp"
        android:text="@string/texto_lista_tarefas"
        app:layout_constraintBottom_toTopOf="@+id/tv_opcao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_opcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        style="@style/genericText"
        android:text="@string/selecione_opcao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_apresentacao" />

    <Button
        android:id="@+id/btn_listar_tarefas"
        android:layout_marginTop="100dp"
        style="@style/genericButton"
        android:text="@string/listar_tarefas"
        app:layout_constraintBottom_toTopOf="@+id/btn_nova_terefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_opcao" />

    <Button
        android:id="@+id/btn_nova_terefa"
        android:layout_marginTop="36dp"
        android:text="@string/adicionar_uma_nova_tarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_listar_tarefas"
        style="@style/genericButton" />

</androidx.constraintlayout.widget.ConstraintLayout>