<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_data"
        style="@style/generic_label_addItem"
        android:layout_marginStart="33dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="39dp"
        android:text="@string/data_do_evento"
        app:layout_constraintBottom_toTopOf="@+id/tv_descricao"
        app:layout_constraintEnd_toStartOf="@+id/et_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="date|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_descricao_evento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_data"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_descricao"
        style="@style/generic_label_addItem"
        android:layout_marginStart="33dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="17dp"
        android:text="@string/descricao_do_evento"
        app:layout_constraintEnd_toStartOf="@+id/et_descricao_evento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data" />

    <EditText
        android:id="@+id/et_descricao_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_descricao"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <Button
        android:id="@+id/btn_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="102dp"
        android:text="@string/atualizar_dados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descricao"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>